Support user passing a custom CMAKE_MODULE_PATH (for BLAS / LAPACK).
- Previously we set CMAKE_MODULE_PATH explicitly rather than appending
  to it when adding our local cmake directory.
- This meant the user could not easily pass their own directory which
  would also be used.  This would be useful if they had their own
  custom FindBLAS / FindLAPACK scripts that they wanted to overload
  the defaults shipped with CMake.

Change-Id: I0c1fda1b6fd81eab68755aa036f64af3efbb226d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,10 @@ IF (EXISTS ${LOCAL_GIT_DIRECTORY})
   ENDIF (NOT EXISTS ${LOCAL_GIT_DIRECTORY}/hooks/commit-msg)
 ENDIF (EXISTS ${LOCAL_GIT_DIRECTORY})
 
-# Make CMake aware of the cmake folder for local FindXXX scripts.
-SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+# Make CMake aware of the cmake folder for local FindXXX scripts,
+# append rather than set in case the user has passed their own
+# additional paths via -D.
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 INCLUDE(UpdateCacheVariable)
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
