Move IterationCallbacks into their own file.
1. Merge TrustRegionLoggingCallback and LineSearchLoggingCallback
   into a single callback.
2. Move the callbacks into callback.h
3. Update SolverImpl to use the new callbacks.

Change-Id: I9e82173cf2b828d023d96c57d1cba17f4832aeae

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -43,6 +43,7 @@ SET(CERES_INTERNAL_SRC
     c_api.cc
     canonical_views_clustering.cc
     cgnr_solver.cc
+    callbacks.cc
     compressed_col_sparse_matrix_utils.cc
     compressed_row_jacobian_writer.cc
     compressed_row_sparse_matrix.cc
