Improve NDK version detection.
The script assert_ndk_version.sh used to require that the user
either define ANDROID_NDK_ROOT or ndk-build be in the path
so that ANDROID_NDK_ROOT can be inferred.

But since we are always calling this script from within an
Android.mk file, ndk-build already defines a variable called
NDK_ROOT, which we can pass to the script, thereby simplifying it
and making it more robust.

Change-Id: Ib59b5a65d01f4e79cb442ccb479f2366c44ad135

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -41,7 +41,6 @@ SET(CERES_INTERNAL_SRC
     block_sparse_matrix.cc
     block_structure.cc
     c_api.cc
-    callbacks.cc
     canonical_views_clustering.cc
     cgnr_solver.cc
     callbacks.cc
@@ -73,7 +72,6 @@ SET(CERES_INTERNAL_SRC
     line_search.cc
     line_search_direction.cc
     line_search_minimizer.cc
-    line_search_solver.cc
     linear_least_squares_problems.cc
     linear_operator.cc
     linear_solver.cc
@@ -89,7 +87,6 @@ SET(CERES_INTERNAL_SRC
     problem.cc
     problem_impl.cc
     program.cc
-    reorder_program.cc
     residual_block.cc
     residual_block_utils.cc
     schur_complement_solver.cc
@@ -98,7 +95,7 @@ SET(CERES_INTERNAL_SRC
     scratch_evaluate_preparer.cc
     single_linkage_clustering.cc
     solver.cc
-    solver_utils.cc
+    solver_impl.cc
     sparse_matrix.cc
     sparse_normal_cholesky_solver.cc
     split.cc
@@ -107,7 +104,6 @@ SET(CERES_INTERNAL_SRC
     summary_utils.cc
     triplet_sparse_matrix.cc
     trust_region_minimizer.cc
-    trust_region_solver.cc
     trust_region_strategy.cc
     types.cc
     visibility.cc
