This adds the ability to compute the covariance using Eigen's Sparse QR module.  For smaller problems, Eigen is faster than SuiteSparseQR but for larger problems SuiteSparseQR is faster.
In older versions of Eigen the sparse operations are experimental. This has been tested with Eigen 3.2.1.

Change-Id: I884a67e2f728fe2992812148d82ccf5f27864fd7

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -61,6 +61,7 @@ SET(CERES_INTERNAL_SRC
     dogleg_strategy.cc
     dynamic_compressed_row_jacobian_writer.cc
     dynamic_compressed_row_sparse_matrix.cc
+    eigen_sparse_matrix_utils.cc
     evaluator.cc
     file.cc
     gradient_checking_cost_function.cc
@@ -245,6 +246,7 @@ IF (BUILD_TESTING AND GFLAGS)
   CERES_TEST(dynamic_autodiff_cost_function)
   CERES_TEST(dynamic_compressed_row_sparse_matrix)
   CERES_TEST(dynamic_numeric_diff_cost_function)
+  CERES_TEST(eigen_sparse_matrix_utils)
   CERES_TEST(evaluator)
   CERES_TEST(gradient_checker)
   CERES_TEST(gradient_checking_cost_function)
