--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -41,6 +41,9 @@
 #ifndef CERES_PUBLIC_INTERNAL_CONFIG_H_
 #define CERES_PUBLIC_INTERNAL_CONFIG_H_
 
+// If defined, use the LGPL code in Eigen.
+@CERES_USE_EIGEN_SPARSE@
+
 // If defined, Ceres was compiled without LAPACK.
 @CERES_NO_LAPACK@
 
