Block AMD for EIGEN_SPARSE
This improves the performance of the solver by orders of
magnitude, making it comparable in performance to CX_SPARSE.
This performance gain can only be realized with Eigen version
3.2.2 or later.

CMakeList.txt has been updated to detect the version and warn
the user appropriately.

Change-Id: I9bb70b25a897e1279022fdaec12591f42ded259c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,13 @@ IF (EIGEN_FOUND)
     MESSAGE("   this option will result in an LGPL licensed version of ")
     MESSAGE("   Ceres Solver as the Simplicial Cholesky factorization in Eigen")
     MESSAGE("   is licensed under the LGPL. ")
+
+    IF (EIGEN_VERSION VERSION_LESS 3.2.2)
+      MESSAGE("   Eigen is older than version 3.2.2. The performance of ")
+      MESSAGE("   SPARSE_NORMAL_CHOLESKY and SPARSE_SCHUR will suffer. ")
+      MESSAGE("   Consider upgrading your version of the Eigen library.")
+    ENDIF (EIGEN_VERSION VERSION_LESS 3.2.2)
+
   ELSE (EIGENSPARSE)
     MESSAGE("   Disabling the use of Eigen as a sparse linear algebra library.")
     MESSAGE("   This does not affect the covariance estimation algorithm ")
