Add block AMD for SPARSE_NORMAL_CHOLESKY when using EIGEN_SPARSE.
Change-Id: I07aeed96ed19b388548ff2c2e514cec5e109ec1e

--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -44,6 +44,8 @@
 // If defined, use the LGPL code in Eigen.
 @CERES_USE_EIGEN_SPARSE@
 
+@CERES_SIMPLICIAL_CHOLESKY_HAS_NATURAL_ORDERING@
+
 // If defined, Ceres was compiled without LAPACK.
 @CERES_NO_LAPACK@
 
