Let EIGEN_SPARSE + SPARSE_NORMAL_CHOLESKY use block AMD.
Modify SparseNormalCholeskySolver to use a pre-ordered Jacobian
matrix.

Change-Id: Ib4d725d7a2d7bb94ea76dbb3a9b172784dbc8ea0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,15 @@ IF (EIGEN_FOUND)
     MESSAGE("   this option will result in an LGPL licensed version of ")
     MESSAGE("   Ceres Solver as the Simplicial Cholesky factorization in Eigen")
     MESSAGE("   is licensed under the LGPL. ")
+
+    IF (EIGEN_VERSION VERSION_LESS 3.2.2)
+      MESSAGE("   WARNING:")
+      MESSAGE("")
+      MESSAGE("   Your version of Eigen is older than version 3.2.2.")
+      MESSAGE("   The performance of SPARSE_NORMAL_CHOLESKY and SPARSE_SCHUR")
+      MESSAGE("   linear solvers will suffer. ")
+    ENDIF (EIGEN_VERSION VERSION_LESS 3.2.2)
+
   ELSE (EIGENSPARSE)
     MESSAGE("   Disabling the use of Eigen as a sparse linear algebra library.")
     MESSAGE("   This does not affect the covariance estimation algorithm ")
