Ignore warnings from within Eigen/SparseQR (3.2.2).
- As reported by Chris Sweeney on the mailing list, Eigen 3.2.2
  trips various warnings in Eigen/SparseQR when compiling with GCC.
- Following Petter Strandmark's suggestion, Eigen headers are now
  treated as system headers, which implicitly suppresses all warnings.

Change-Id: I104e8cb3f00935cefb894089bea827771e0e9fd0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -528,8 +528,18 @@ INCLUDE_DIRECTORIES(
   include
   internal
   internal/ceres
-  ${GLOG_INCLUDE_DIRS}
-  ${EIGEN_INCLUDE_DIRS})
+  ${GLOG_INCLUDE_DIRS})
+# Eigen SparseQR generates various compiler warnings related to unused and
+# uninitialised local variables, which prevents Ceres compilation as we use
+# -Werror.  To avoid having to individually suppress these warnings around
+# the #include statments for Eigen headers across all GCC/Clang versions, we
+# tell CMake to treat Eigen headers as system headers.  This results in all
+# compiler warnings from them being suppressed.
+#
+# Note that this is *not* propagated to clients, ie CERES_INCLUDE_DIRS
+# used by clients after find_package(Ceres) does not identify Eigen as
+# as system headers.
+INCLUDE_DIRECTORIES(SYSTEM ${EIGEN_INCLUDE_DIRS})
 
 IF (SUITESPARSE)
   INCLUDE_DIRECTORIES(${SUITESPARSE_INCLUDE_DIRS})
