Move check for non-standard Eigen installs into FindEigen.cmake
- As part of adding support for detection of non-standard Homebrew
  install on OSX, an Eigen specific search directory was added to the
  search path in the main CMakeLists.  This commit moves that search
  into FindEigen.cmake.

Change-Id: Ia6142211961a0d1fdddeea77b83438e4ef94434f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,8 @@ IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
       OUTPUT_STRIP_TRAILING_WHITESPACE)
     MESSAGE(STATUS "Detected Homebrew with install prefix: "
       "${HOMEBREW_INSTALL_PREFIX}, adding to CMake search paths.")
+    LIST(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_INSTALL_PREFIX}")
   ENDIF()
-  # Note that Eigen is stored in <XXX>/include/eigen3/Eigen/XXX.h
-  # as such, the default prefix path on it's own is insufficient.
-  LIST(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_INSTALL_PREFIX}"
-    "${HOMEBREW_INSTALL_PREFIX}/include/eigen3")
 ENDIF()
 
 # Make CMake aware of the cmake folder for local FindXXX scripts,
