Add SuiteSparse link dependency for compressed_col_sparse_matrix_utils_test.
- Reported by stonier@yujinrobot.com as Issue 153:
  https://code.google.com/p/ceres-solver/issues/detail?id=153

Change-Id: I3f0e67291adf129a6e7857ccc5f4e7e355feceb8

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -291,6 +291,8 @@ IF (BUILD_TESTING AND GFLAGS)
   # independent of SuiteSparse.
   IF (SUITESPARSE AND SUITESPARSE_FOUND)
     CERES_TEST(compressed_col_sparse_matrix_utils)
+    TARGET_LINK_LIBRARIES(compressed_col_sparse_matrix_utils_test
+                          ${SUITESPARSE_LIBRARIES})
   ENDIF (SUITESPARSE AND SUITESPARSE_FOUND)
 
   CERES_TEST(symmetric_linear_solver)
