Hide Homebrew related variables in CMake GUI.
- Results of find_program() are by default visible in the CMake GUI
  (cache), but the user has no reason to care in general about the
  location of the Homebrew executable detected.
- Note it is still available in the GUI, but only via toggling to the
  advanced display.

Change-Id: Ifb0e54c00d350cbfb3b2717d889570cab61cce54

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ ENDIF (EXISTS ${LOCAL_GIT_DIRECTORY})
 # location (not /usr/local).
 IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
   FIND_PROGRAM(HOMEBREW_EXECUTABLE brew)
+  MARK_AS_ADVANCED(FORCE HOMEBREW_EXECUTABLE)
   IF (HOMEBREW_EXECUTABLE)
     # Detected a Homebrew install, query for its install prefix.
     EXECUTE_PROCESS(COMMAND ${HOMEBREW_EXECUTABLE} --prefix
